Fixing main crash when resizing window

--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sampleApp="using:Microsoft.Toolkit.Uwp.SampleApp"
+    SizeChanged="SamplePicker_OnSizeChanged"
     mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Key="SampleTemplate" x:DataType="sampleApp:Sample">
@@ -67,7 +68,6 @@
                     </VisualState.StateTriggers>
 
                     <VisualState.Setters>
-                        <Setter Target="SamplesList.ItemTemplate" Value="{StaticResource SmallSampleTemplate}" />
                         <Setter Target="SamplesList.ItemsPanel">
                             <Setter.Value>
                                 <ItemsPanelTemplate>
@@ -86,11 +86,15 @@
         <Rectangle Fill="{StaticResource Brush-Grey-04}"/>
         <TextBlock Grid.Row="0" Margin="12"
                    Text="{x:Bind ViewModel.Name, Mode=OneWay}" 
-                   FontSize="24" FontWeight="Light" Foreground="{StaticResource Brush-Grey-03}"/>
-        <GridView Name="SamplesList" 
-                  Grid.Row="1" Padding="6"
-                  ItemsSource="{x:Bind ViewModel.Samples}" ItemTemplate="{StaticResource SampleTemplate}" 
-                  IsItemClickEnabled="True" ItemClick="SamplesList_OnItemClick">
+                   FontSize="24" FontWeight="Light" 
+                   Foreground="{StaticResource Brush-Grey-03}"/>
+        <GridView Name="SamplesList"
+                  Grid.Row="1" 
+                  Padding="6"
+                  ItemsSource="{x:Bind ViewModel.Samples}" 
+                  ItemTemplate="{StaticResource SampleTemplate}" 
+                  IsItemClickEnabled="True" 
+                  ItemClick="SamplesList_OnItemClick">
             <GridView.ItemContainerStyle>
                 <Style TargetType="GridViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
