Adding GridSplitter Cursor Behavior

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -118,7 +118,8 @@
                 Grid.Column="{Binding Column.Value}"
                 GripperForeground="White"
                 ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
-                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}">
+                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}"
+                CursorBehavior="{Binding CursorBehavior.Value,Mode=TwoWay}">
         </controls:GridSplitter>
 
         <!--Row Grid Splitter-->
