--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DropShadowPanel/DropShadowPanelPage.xaml
@@ -26,7 +26,14 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Foreground="{StaticResource Brush-Grey-03}" Text="DropShadowPanel is only available on Windows 10 Anniversary Update or greater" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 20" x:Name="WarningText" Visibility="Collapsed"></TextBlock>
+        <TextBlock Foreground="{StaticResource Brush-Grey-03}" 
+                   Text="DropShadowPanel is only available on Windows 10 Anniversary Update or greater" 
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Top" 
+                   Margin="0, 20"
+                   TextWrapping="Wrap"
+                   x:Name="WarningText" 
+                   Visibility="Collapsed"></TextBlock>
         
         <ScrollViewer Margin="15,15,15,0" VerticalScrollBarVisibility="Auto" Grid.Row="1">
             <StackPanel>
