--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeControl/BladeControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeControl/BladeControl.xaml
@@ -6,6 +6,7 @@
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Enabled" />
         <Setter Property="ScrollViewer.VerticalScrollMode" Value="Disabled" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
     </Style>
 
     <Style TargetType="controls:BladeControl">
