--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
@@ -41,6 +41,7 @@
                 <controls:Blade x:Name="FirstBlade"
                                 Title="Test"
                                 IsOpen="True"
+                                Width="400"
                                 TitleBarVisibility="Collapsed"
                                 Background="{StaticResource Brush-White}"
                                 BorderBrush="{StaticResource Brush-Grey-04}">
@@ -65,6 +66,7 @@
                                 x:Name="SecondBlade"
                                 BladeId="BladeTest1"
                                 IsOpen="False"
+                                Width="400"
                                 Background="{StaticResource Brush-White}"
                                 BorderBrush="{StaticResource Brush-Grey-04}">
                     <controls:Blade.Element>
@@ -79,6 +81,7 @@
                                 x:Name="ThirdBlade"
                                 BladeId="BladeTest2"
                                 IsOpen="False"
+                                Width="400"
                                 TitleBarBackground="{StaticResource Brush-Blue-01}"
                                 TitleBarForeground="{StaticResource Brush-White}"
                                 CloseButtonForeground="{StaticResource Brush-White}"
@@ -95,6 +98,7 @@
                 <controls:Blade Title="Custom close button color"
                                 x:Name="FourthBlade"
                                 BladeId="BladeTest3"
+                                Width="400"
                                 CloseButtonBackground="{StaticResource Brush-Grey-01}"
                                 CloseButtonForeground="{StaticResource Brush-White}"
                                 Background="{StaticResource Brush-White}"
