--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Vision Service/VisionServicePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Vision Service/VisionServicePage.xaml
@@ -23,7 +23,7 @@
                     </Grid.RowDefinitions>
 
                     <!-- Api Key area -->
-                    <Grid >
+                    <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -40,7 +40,7 @@
 
                         <StackPanel x:Name="ApiKeyPanel" Orientation="Vertical" Margin="24" Grid.Row="1">
                             <HyperlinkButton Content="Show me how to get a Key" NavigateUri="" Margin="0,0,0,15"/>
-                            <TextBox Header="Api Key:" x:Name="ApiKey" Margin="0,0,0,12" Text="81c7f32b09ed40cc98b91ef7eae50650"/>
+                            <TextBox Header="Api Key:" x:Name="ApiKey" Margin="0,0,0,12" Text=""/>
                             <Button Content="Set" x:Name="SetApiKeyButton" Click="SetApiKeyButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
                         </StackPanel>
                     </Grid>
@@ -57,16 +57,38 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <Button x:Name="TagImagesExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="TagImagesExpandButton_Click"/>
-                            <TextBlock Grid.Column="1" Text="TagImage" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <TextBlock Grid.Column="1" Text="From Image" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
 
                         <StackPanel Grid.Row="1" Margin="24" x:Name="TagImagePanel">
-                            <Image x:Name="TagImage"
+                            <Image x:Name="PickerDisplayImage"
                                    Height="100"
                                    Margin="0,0,0,12"
                                    Width="100"/>
                             <StackPanel Orientation="Horizontal">
-                                <Button Content="Set" x:Name="TagImageFromPicker" Click="TagImageFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                                <Button Content="Select Image" x:Name="SelectImage" Click="SelectImage_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            </StackPanel>
+                            <TextBlock Text="Get Tags" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <StackPanel Orientation="Horizontal">
+                                <Button Content="Tag" x:Name="TagImageFromPicker" Click="TagImageFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            </StackPanel>
+                            <TextBlock Text="OCR" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <StackPanel Orientation="Horizontal">
+                                <ComboBox Name="OcrImageLanguages" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Margin="5" Text="{Binding Text}"/>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                                <ComboBox Name="OcrImageDetectOrientation" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Margin="5" Text="{Binding Text}"/>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                                <Button Content="Ocr" x:Name="OcrImageFromPicker" Click="OcrImageFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
@@ -83,20 +105,43 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <Button x:Name="TagUrlExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="TagUrlExpandButton_Click"/>
-                            <TextBlock Grid.Column="1" Text="TagImage" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <TextBlock Grid.Column="1" Text="From Url" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
 
-                        <StackPanel Grid.Row="1" Margin="24" x:Name="TagUrlPanel">
-                            <TextBox x:Name="ImageUrl" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+
+                        <StackPanel x:Name="TagUrlPanel" Orientation="Vertical" Margin="24" Grid.Row="1">
+                            <TextBox Header="Image Url:" x:Name="ImageUrl" Margin="0,0,0,12" Text=""/>
+
+                            <TextBlock Text="Get Tags" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
                             <StackPanel Orientation="Horizontal">
-                                <Button Content="Set" x:Name="TagUrlFromPicker" Click="TagUrlFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                                <Button Content="Tag" x:Name="TagUrlFromPicker" Click="TagUrlFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            </StackPanel>
+
+                            <TextBlock Text="OCR" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <StackPanel Orientation="Horizontal">
+                                <ComboBox Name="OcrUrlLanguages" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Margin="5" Text="{Binding Text}"/>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                                <ComboBox Name="OcrUrlDetectOrientation" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Margin="5" Text="{Binding Text}"/>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                                <Button Content="Ocr" x:Name="OcrUrlFromPicker" Click="OcrUrlFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
                             </StackPanel>
                         </StackPanel>
+
                     </Grid>
 
 
                     <!-- Results area -->
-                    <TextBox x:Name="ResultTextbox" Grid.Row="3" Margin="0,12,0,0"/>
+                    <TextBox x:Name="ResultTextbox" Grid.Row="3" Margin="24" TextWrapping="Wrap"/>
                 </Grid>
             </ScrollViewer>
         </Grid>
