--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
@@ -25,8 +25,8 @@
                                        LeftForeground ="{Binding DataContext.LeftForeground.Value, ElementName=Root, Mode=OneWay}" 
                                        RightForeground ="{Binding DataContext.RightForeground.Value, ElementName=Root, Mode=OneWay}"
                                        MouseSlidingEnabled="{Binding DataContext.MouseSlidingEnabled.Value, ElementName=Root, Mode=OneWay}"
-                                       IsRightSwipeEnabled="{Binding DataContext.IsRightSwipeEnabled.Value, ElementName=Root, Mode=OneWay}"
-                                       IsLeftSwipeEnabled="{Binding DataContext.IsLeftSwipeEnabled.Value, ElementName=Root, Mode=OneWay}"
+                                       IsLeftCommandEnabled="{Binding DataContext.IsLeftCommandEnabled.Value, ElementName=Root, Mode=OneWay}"
+                                       IsRightCommandEnabled="{Binding DataContext.IsRightCommandEnabled.Value, ElementName=Root, Mode=OneWay}"
                                        LeftCommand="{x:Bind ToggleFavorite}"
                                        RightCommand="{Binding DeleteItem, ElementName=Page, Mode=OneWay}"
                                        RightCommandParameter="{Binding}"
