--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Vision Service/VisionServicePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Vision Service/VisionServicePage.xaml
@@ -6,6 +6,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.Resources>
+        <Style TargetType="StackPanel" x:Key="RequestTypeStackPanelStyle">
+            <Setter  Property="BorderBrush" Value="{StaticResource Brush-Grey-02}"></Setter>
+            <Setter  Property="Background" Value="{StaticResource Brush-Grey-05}"></Setter>
+            <Setter  Property="BorderThickness" Value="1"></Setter>
+        </Style>
+    </Page.Resources>
 
     <Grid Background="{StaticResource Brush-Grey-05}" MaxWidth="800">
         <Grid Margin="24" BorderThickness="1" BorderBrush="#FFCCCCCC" Background="{StaticResource Brush-Grey-04}" CornerRadius="4">
@@ -16,7 +23,6 @@
             <ScrollViewer Grid.Row="1">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -57,89 +63,81 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <Button x:Name="TagImagesExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="TagImagesExpandButton_Click"/>
-                            <TextBlock Grid.Column="1" Text="From Image" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            <TextBlock Grid.Column="1" Text="Vision Service" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
                         </Grid>
 
-                        <StackPanel Grid.Row="1" Margin="24" x:Name="TagImagePanel">
-                            <Image x:Name="PickerDisplayImage"
-                                   Height="100"
-                                   Margin="0,0,0,12"
-                                   Width="100"/>
-                            <StackPanel Orientation="Horizontal">
+                        <StackPanel Grid.Row="1" Margin="24" x:Name="VisionPanel">
+                            <ToggleButton Name="ShowImageUrlPanel"
+                                          Content="Process From Url"
+                                          Margin="0,0,0,10"
+                                          HorizontalAlignment="Center" Checked="ShowImageUrlPanel_Checked" Unchecked="ShowImageUrlPanel_Unchecked"></ToggleButton>
+
+                            <StackPanel x:Name="ImagePanel" Orientation="Vertical" HorizontalAlignment="Center" Margin="0,0,0,10">
+                                <Border  Height="100" Width="100" BorderBrush="{StaticResource Brush-Grey-03}" BorderThickness="1">
+                                    <Image x:Name="PickerDisplayImage" />
+                                </Border>
                                 <Button Content="Select Image" x:Name="SelectImage" Click="SelectImage_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
                             </StackPanel>
-                            <TextBlock Text="Get Tags" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
-                            <StackPanel Orientation="Horizontal">
-                                <Button Content="Tag" x:Name="TagImageFromPicker" Click="TagImageFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            <StackPanel Visibility="Collapsed" x:Name="UrlPanel" Orientation="Vertical">
+                                <TextBox Header="Image Url:" x:Name="ImageUrl" Margin="0,0,0,12" Text=""/>
                             </StackPanel>
-                            <TextBlock Text="OCR" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
-                            <StackPanel Orientation="Horizontal">
-                                <ComboBox Name="OcrImageLanguages" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Margin="5" Text="{Binding Text}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <ComboBox Name="OcrImageDetectOrientation" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Margin="5" Text="{Binding Text}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <Button Content="Ocr" x:Name="OcrImageFromPicker" Click="OcrImageFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
-                            </StackPanel>
-                        </StackPanel>
-                    </Grid>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Row="2" x:Name="TagUrls">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
+                                <StackPanel Orientation="Vertical">
+                                    <StackPanel Style="{StaticResource RequestTypeStackPanelStyle}" Orientation="Vertical">
+                                        <TextBlock Text="Get Image Tags" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" FontWeight="SemiBold"/>
+                                        <Button Content="Tag" Margin="10" x:Name="TagImageFromPicker" Click="TagImageFromPicker_Click"  VerticalAlignment="Bottom"></Button>
+                                    </StackPanel>
+                                    <StackPanel Style="{StaticResource RequestTypeStackPanelStyle}" Orientation="Vertical">
+                                        <TextBlock Text="OCR Image" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" FontWeight="SemiBold"/>
+                                        <StackPanel Orientation="Vertical">
+                                            <ComboBox Header="Language" Name="AnalyzeImageVisualFeatures" Margin="10" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                                <ComboBox.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Margin="5" Text="{Binding Text}"/>
+                                                    </DataTemplate>
+                                                </ComboBox.ItemTemplate>
+                                            </ComboBox>
+                                            <TextBox Header="Details (Comma Separated)" Name="AnalyzeImageDetails" Margin="10" Text="Celebrities" />
+                                            <Button Content="Ocr" x:Name="AnalyzeImageButton" Click="AnalyzeImageButton_Click" Margin="10" VerticalAlignment="Bottom"></Button>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </StackPanel>
 
-                        <Grid Background="#FFCCCCCC">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <Button x:Name="TagUrlExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="TagUrlExpandButton_Click"/>
-                            <TextBlock Grid.Column="1" Text="From Url" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
-                        </Grid>
+                                <StackPanel Orientation="Vertical" Grid.Column="1">
+                                    <StackPanel Style="{StaticResource RequestTypeStackPanelStyle}" Orientation="Vertical">
+                                        <TextBlock Text="OCR Image" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" FontWeight="SemiBold"/>
+                                        <StackPanel Orientation="Vertical">
+                                            <ComboBox Header="Language" Name="OcrImageLanguages" Margin="10" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                                <ComboBox.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Margin="5" Text="{Binding Text}"/>
+                                                    </DataTemplate>
+                                                </ComboBox.ItemTemplate>
+                                            </ComboBox>
+                                            <ComboBox Header="Detect Orientation" Name="OcrImageDetectOrientation" Margin="10" VerticalAlignment="Bottom" ItemsSource="{Binding}">
+                                                <ComboBox.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <TextBlock Margin="5" Text="{Binding Text}"/>
+                                                    </DataTemplate>
+                                                </ComboBox.ItemTemplate>
+                                            </ComboBox>
+                                            <Button Content="Ocr" x:Name="OcrImageFromPicker" Click="OcrImageFromPicker_Click" Margin="10" VerticalAlignment="Bottom"></Button>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Grid>
 
 
-                        <StackPanel x:Name="TagUrlPanel" Orientation="Vertical" Margin="24" Grid.Row="1">
-                            <TextBox Header="Image Url:" x:Name="ImageUrl" Margin="0,0,0,12" Text=""/>
-
-                            <TextBlock Text="Get Tags" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
-                            <StackPanel Orientation="Horizontal">
-                                <Button Content="Tag" x:Name="TagUrlFromPicker" Click="TagUrlFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
-                            </StackPanel>
-
-                            <TextBlock Text="OCR" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
-                            <StackPanel Orientation="Horizontal">
-                                <ComboBox Name="OcrUrlLanguages" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Margin="5" Text="{Binding Text}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <ComboBox Name="OcrUrlDetectOrientation" Margin="0,10,0,0" VerticalAlignment="Bottom" ItemsSource="{Binding}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Margin="5" Text="{Binding Text}"/>
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <Button Content="Ocr" x:Name="OcrUrlFromPicker" Click="OcrUrlFromPicker_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
-                            </StackPanel>
                         </StackPanel>
                     </Grid>
 
                     <!-- Results area -->
-                    <TextBox x:Name="ResultTextbox" Grid.Row="3" Margin="24" TextWrapping="Wrap"/>
+                    <TextBox x:Name="ResultTextbox" Grid.Row="2" Margin="24" TextWrapping="Wrap"/>
                 </Grid>
             </ScrollViewer>
         </Grid>
