--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -45,26 +45,27 @@
                     <ControlTemplate TargetType="controls:CodeRenderer">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
                                 <RowDefinition/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Grid Opacity="0"
                                   Grid.RowSpan="2"
                                   x:Name="Container"/>
-                            <Button 
-                                    x:Name="PrintButton"
-                                    HorizontalAlignment="Right" 
-                                    Content="Print"
-                                    Grid.Row="0"/>
                             <ProgressRing Name="progress" 
-                                          Grid.Row="1"
+                                          Grid.Row="0"
                                           Width="100" 
                                           Height="100" 
                                           Foreground="{TemplateBinding Foreground}" 
                                           IsActive="True" 
                                           VerticalAlignment="Center" 
                                           HorizontalAlignment="Center"/>
-                            <WebView Name="webView" Visibility="Collapsed" Grid.Row="1"/>
+                            <WebView Name="webView" Visibility="Collapsed" Grid.Row="0"/>
+                            <Button 
+                                    x:Name="PrintButton"
+                                    HorizontalAlignment="Center" 
+                                    Margin="5"
+                                    Content="Print"
+                                    Grid.Row="1"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
